Fixed margin gaps in skills and work component

--- a/components/skills/Skills.module.css
+++ b/components/skills/Skills.module.css
@@ -116,16 +116,16 @@
 @media (max-width: 40rem) {
 
     .mainContainer{
-        height: 100vh;
         width: 100vw;
+        height: auto;
+        flex-direction: column;
         background-attachment: fixed;
         background-size: cover;
     }
 
     .consolidatedSkills{
-        height: 30vh;
+        height: 200px;
         width: 80vw;
-        margin-top: 10vh;
     }
 
     .skillsContainer{
@@ -151,11 +151,5 @@
 
     .consolidatedSkills span{
         font-size: 15px;
-    }
-}
-
-@media screen and (device-width: 360px) and (device-height: 640px) {
-    .consolidatedSkills{
-        margin-top: 40vh;
     }
 }
