--- a/components/works/Works.module.css
+++ b/components/works/Works.module.css
@@ -1,6 +1,6 @@
 .mainContainer{
     width: 100vw;
-    /*height: calc(100vh - 10vh);*/
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
